# autorobo.universe

./: README.md
behavior/autorobo_behavior/: package.xml  setup.cfg  setup.py
behavior/autorobo_behavior/autorobo_behavior/: behavior_node.py
common/autorobo_teleop/: package.xml  setup.cfg  setup.py
common/autorobo_teleop/autorobo_teleop/: background_key.py  teleop_key.py
common/autorobo_visualization/: CMakeLists.txt  package.xml
common/autorobo_visualization/include/autorobo_visualization/: visualize_lines_node.hpp  visualize_stl_node.hpp
common/autorobo_visualization/src/: visualize_lines_node.cpp  visualize_stl_node.cpp
control/autorobo_control/: CMakeLists.txt  package.xml
control/autorobo_control/include/autorobo_control/: pure_pursuit_node.hpp
control/autorobo_control/src/: pure_pursuit_node.cpp
launch/autorobo_launch/: CMakeLists.txt  package.xml
launch/autorobo_launch/config/: X4.yaml  bridge.yaml
launch/autorobo_launch/config/visualization/: field_area.yaml  movable_area.yaml  robot_area.yaml  start_left_area.yaml  visualize_field.yaml
launch/autorobo_launch/config/visualize/: start_right_area.yaml  visualize_robot.yaml
launch/autorobo_launch/launch/: localization.launch.xml  localization_test.launch.xml  mcl_test.xml  planning.launch.xml  sim.launch.xml  ydlidar.launch.py
launch/autorobo_launch/launch/common/: bridge.launch.xml  marker.launch.xml  start_rviz.launch.xml  tf.launch.xml
launch/autorobo_launch/launch/common/visualization/: field_area.launch.xml  movable_area.launch.xml  robot_area.launch.xml  start_left_area.launch.xml  start_right_area.launch.xml  visualize_field.launch.xml  visualize_robot.launch.xml
launch/autorobo_launch/model3d/: R1_A.STL  field.stl  robot.stl
launch/autorobo_launch/params/: control.yaml  planner.yaml
launch/autorobo_launch/params/bt/: default.bt
launch/autorobo_launch/rviz/: autorobo.rviz  lidar_test.rviz  localization_test.rviz  mcl.rviz
localization/autorobo_localization/: CMakeLists.txt  package.xml
localization/autorobo_localization/include/autorobo_localization/: mcl_node.hpp  ransac_node.hpp
localization/autorobo_localization/src/: mcl_node.cpp  ransac_node.cpp
localization/autorobo_map/: CMakeLists.txt  package.xml
localization/autorobo_map/include/autorobo_map/: map_node.hpp
localization/autorobo_map/src/: map_node.cpp
message/autorobo_msgs/: CMakeLists.txt  package.xml
message/autorobo_msgs/msg/: Twistring
message/autorobo_twistring/: CMakeLists.txt  package.xml
planning/autorobo_path_planning/: CMakeLists.txt  package.xml
planning/autorobo_path_planning/src/: planner_node.cpp
planning/autorobo_planner/: CMakeLists.txt  package.xml
planning/autorobo_planner/include/autorobo_planner/: planner_node.hpp
planning/autorobo_planner/src/: planner_node.cpp
simulation/autorobo_simulation/: CMakeLists.txt  package.xml
simulation/autorobo_simulation/include/autorobo_simulation/: simulation_node.hpp
simulation/autorobo_simulation/src/: simulation_node.cpp
